Fix nav bar not expanding on small screens, added top artists/tracks

--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ html, body, #root {
 }
 
 .genify-navbar {
-    height: var(--navbar-height);
+    height: var(--navbar-height)!important;
 }
 
 .genify-player {
